# mundaneum

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: app_context.py  config.py  database.py  dependencies.py  exceptions.py  logging.py  main.py  middleware.py  models.py  runtime.py  runtime_components.py  runtime_models.py
backend/app/cli/: __init__.py  import_bibtex.py  sync_meilisearch.py
backend/app/modeling/: __init__.py  catalog_models.py  collection_models.py  concept_models.py  library_models.py  ner_models.py  s2_models.py  trend_models.py  value_objects.py
backend/app/routers/: admin.py  authors.py  collections.py  concepts.py  entity_common.py  entries.py  entries_core.py  entries_s2.py  graph.py  ingest.py  ner.py  search.py  subjects.py  topics.py  trends.py  venues.py
backend/app/schemas/: admin.py  collections.py  concepts.py  entities.py  entries.py  graph.py  ner.py  s2.py  search.py  system.py  trends.py
backend/app/services/: admin_backup.py  admin_ingest.py  bibliography_contract.py  bibliography_repository.py  collection_mutations.py  collection_queries.py  domain_events.py  entry_exports.py  entry_mutations.py  entry_queries.py  entry_s2.py  entry_serializers.py  graph.py  graph_aggregates.py  graph_algorithms.py  graph_builder.py  graph_fetch.py  graph_materializers.py  graph_models.py  graph_resolution.py  ingest.py  ingest_entities.py  ingest_pipeline.py  ner_ingest.py  parser.py  parser_catalogs.py  parser_passes.py  parser_pipeline.py  s2.py  s2_corpus.py  s2_corpus_mappers.py  s2_corpus_mapping.py  s2_corpus_queries.py  s2_corpus_store.py  s2_ingest.py  s2_ingest_cli.py  s2_ingest_config.py  s2_ingest_download.py  s2_ingest_duckdb.py  (+17 more)
backend/migrations/: env.py
backend/scripts/: import_bibtex.py  sync_meilisearch.py  verify_s2_sync.py
backend/tests/: conftest.py  test_admin.py  test_architecture.py  test_collections.py  test_concepts_routers.py  test_entities_routers.py  test_entries.py  test_graph_provider.py  test_health.py  test_ingest_bibliography_roles.py  test_middleware.py  test_ner_auto_ingest.py  test_ner_ingest.py  test_ner_routers.py  test_parser_metadata.py  test_runtime.py  test_s2_corpus.py  test_s2_corpus_helpers.py  test_s2_integration.py  test_search.py  test_storage.py  test_trends_routers.py
(+106 files in other folders)
