[tool.poetry]
name = "mundaneum-backend"
version = "0.1.0"
description = "Mundaneum backend API"
authors = ["You"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.scripts]
mundaneum-import-bibtex = "app.cli.import_bibtex:run"
mundaneum-sync-meilisearch = "app.cli.sync_meilisearch:run"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
meilisearch = "^0.31.0"
bibtexparser = "^1.4.1"
minio = "^7.2.3"
httpx = "^0.26.0"
pylatexenc = "^2.10"
duckdb = "^1.0.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
httpx = "^0.26.0"
ruff = "^0.2.0"
pytest-asyncio = "^0.23.0"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4"]
ignore = ["E501", "B008"]  # E501: line length; B008: FastAPI Depends() pattern

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore:The event_loop fixture provided by pytest-asyncio has been redefined:DeprecationWarning",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
